# exchange-rate-canister

./: .dockerignore  .gitignore  0.json  1000.json  2000.json  3000.json  CHANGELOG.md  Cargo.toml  Dockerfile  INTERFACE_SPECIFICATION.md  LICENSE  README.md  TESTING.md  canister_ids.json  cliff.toml  development-guide.md  dfx.json  minica-key.pem  minica.pem
.github/: CODEOWNERS
.github/workflows/: canbench-post-comment.yml  checks.yml  docker-build.yml  e2e.yml  pr-checks.yml  pr.yml  release.yml  tests.yml
deployment/mainnet/: exchange_rate_canister_upgrade_2026_05_29.md  exchange_rate_canister_upgrade_2026_06_05.md  exchange_rate_canister_upgrade_2026_06_12.md  exchange_rate_canister_upgrade_2026_06_19.md  exchange_rate_canister_upgrade_2026_06_26.md
e2e-tests/: Dockerfile  docker-compose.yml
e2e-tests/nginx/: default.conf
scripts/: build  build-mock-wasm  build-wasm  check-exchanges.py  ci_download_canbench_artifacts.sh  ci_post_run_benchmark.sh  ci_run_benchmark.sh  docker-build  e2e-tests  e2e-tests-build-base  e2e-tests-custom-wasm  local-build  pocket-ic-tests  run-e2e-test
src/ic-xrc-types/: Cargo.toml  README.md
src/ic-xrc-types/src/: lib.rs
src/monitor-canister/: Cargo.toml  README.md  monitor-canister.did
src/monitor-canister-exporter/: Cargo.toml
src/monitor-canister-exporter/src/: main.rs  types.rs
src/monitor-canister/src/: api.rs  environment.rs  lib.rs  main.rs  periodic.rs  state.rs  types.rs
src/xrc/: Cargo.toml  canbench.yml  canbench_results.yml  hidden_endpoints.conf  xrc.did
src/xrc-cli/: Cargo.toml
src/xrc-cli/src/: commands.rs  main.rs
src/xrc-cli/src/commands/: exchange.rs
src/xrc-cli/src/commands/exchange/: list.rs
src/xrc-stress-test/: Cargo.toml
src/xrc-stress-test/src/: main.rs
src/xrc-test-proxy/: Cargo.toml  xrc-test-proxy.did
src/xrc-test-proxy/src/: main.rs
src/xrc-tests/: Cargo.toml
src/xrc-tests/docker/: Dockerfile  base.Dockerfile  docker-compose.yml  docker-entrypoint.sh  e2e.Dockerfile  nginx.conf  router.lua  supervisord.conf
src/xrc-tests/docker/nginx/: generate-certs-and-keys.sh  template.conf  test.json
src/xrc-tests/src/: container.rs  image.rs  lib.rs  main.rs  mock_responses.rs  pocket.rs  response.rs  samples.rs  scenario.rs  scenarios.rs  templates.rs  tests.rs
src/xrc-tests/src/container/: utils.rs
src/xrc-tests/src/mock_responses/: exchanges.rs  forex.rs  stablecoin.rs
src/xrc-tests/src/mock_responses/forex/: austrailia.rs  australia.rs  bank_of_canada.rs  bosnia.rs  canada.rs  europe.rs  georgia.rs  italy.rs  myanmar.rs  nepal.rs  singapore.rs  switzerland.rs  turkey.rs  uzbekistan.rs
src/xrc-tests/src/samples/: bank_of_canada.rs  bank_of_israel.rs  central_bank_of_bosnia_herzegovina.rs  central_bank_of_europe.rs  central_bank_of_myanmar.rs
src/xrc-tests/src/scenarios/: basic.rs  caching.rs  utils.rs
src/xrc-tests/src/tests/: basic_exchange_rates.rs  caching.rs  can_successfully_cache_rates.rs  can_successfully_retrieve_rate.rs  determinism.rs  get_icp_xdr_rate.rs  metrics_endpoint.rs  misbehavior.rs  real_world.rs
src/xrc/benches/data/: README.md  bitget.json  coinbase.json  cryptocom.json  digifinex.json  gateio.json  kucoin.json  mexc.json  okx.json  poloniex.json
src/xrc/src/: api.rs  benchmarks.rs  cache.rs  candid.rs  canister_http.rs  environment.rs  errors.rs  exchanges.rs  forex.rs  http.rs  inflight.rs  jq.rs  lib.rs  listings.rs  main.rs  periodic.rs  rate_limiting.rs  request_log.rs  stablecoin.rs  types.rs  utils.rs
src/xrc/src/api/: dashboard.rs  get_exchange_rate.rs  metrics.rs  test.rs
src/xrc/src/exchanges/: api.rs  binance.rs  coinbase.rs  gateio.rs  kucoin.rs  mexc.rs  okx.rs  poloniex.rs  test.rs  tests.rs
src/xrc/src/forex/: australia.rs  bosnia_herzegovina.rs  canada.rs  europe.rs  georgia.rs  italy.rs  myanmar.rs  nepal.rs  singapore.rs  switzerland.rs  test.rs  tests.rs  turkey.rs  uzbekistan.rs
src/xrc/test-data/exchanges/: binance.json  bitget.json  bybit.json  coinbase.json  crypto.json  digifinex.json  gateio.json  kucoin.json  mexc.json  okx.json  poloniex.json
src/xrc/test-data/exchanges/listings/: bitget.json  coinbase.json  cryptocom.json  digifinex.json  gateio.json  kucoin.json  mexc.json  okx.json  poloniex.json
src/xrc/test-data/forex/: bank-of-canada.json  bank-of-israel.xml  bank-of-italy.json  central-bank-of-bosnia-herzegovina.json  central-bank-of-europe.xml  central-bank-of-georgia.json  central-bank-of-myanmar.json  central-bank-of-nepal.json  central-bank-of-turkey.xml  central-bank-of-uzbekistan.json  monetary-authority-of-singapore.json  reserve-bank-of-australia.xml  swiss-office-for-customs.xml
src/xrc_backend/: Cargo.toml
src/xrc_mock/: Cargo.toml  xrc.did
src/xrc_mock/src/: main.rs
test.com/: cert.pem  key.pem
