[workspace]
members = [
    "src/xrc",
    "src/ic-xrc-types",
    # crates used for development
    "src/xrc-tests",
    "src/monitor-canister",
]

[workspace.dependencies]
candid = "0.10.2"
chrono = { version = "0.4.33", default-features = false, features = [
    "std",
    "alloc",
] }
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"


[profile.release]
lto = true
opt-level = 'z'
