[workspace]
members = [
    "src/xrc",
    "src/ic-xrc-types",
    # crates used for development
    "src/xrc-tests",
    "src/monitor-canister",
    "src/xrc_mock",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10.20"
chrono = { version = "0.4.33", default-features = false, features = [
    "std",
    "alloc",
] }
ic-cdk = "0.19.0"
ic-cdk-executor = "2.0.0"
ic-cdk-timers = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
lto = true
opt-level = 'z'
