[package]
name = "monitor-canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
candid = "0.8.0"
ic-cdk = "0.6.5"
ic-cdk-macros = "0.6.0"
ic-stable-structures = "0.1.0"
ic-xrc-types = { path = "../ic-xrc-types" }
futures = "0.3.23"
serde = "1.0.110"
chrono = "=0.4.19"
num-traits = "0.2.15"
serde_derive = "1.0"
serde_bytes = "0.11"
xrc = { path = "../xrc" }
