[package]
name = "monitor-canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = "0.1.0"
ic-xrc-types = { path = "../ic-xrc-types" }
futures = "0.3.23"
serde = "1.0.110"
num-traits = "0.2.15"
xrc = { path = "../xrc" }
