[package]
name = "xrc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"]}
serde = "1.0.110"
serde_json = "1.0.74"
xrc = { path = "../xrc" }
url = "2.2.2"
