[package]
name = "xrc-stress-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.0"
clap = { version = "4.0.29", features = ["derive"] }
hex = "0.4.3"
tokio = { version = "1.23.0", features = ["full"] }
xrc = { path = "../xrc" }
