[package]
name = "xrc-tests"
version = "1.0.0"
edition = "2021"

[dependencies]
candid = "0.8.0"
hex = "0.4.3"
ic-cdk = "0.6.5"
ic-xrc-types = { path = "../ic-xrc-types" }
serde = "1.0.110"
serde_json = "1.0.74"
tera = { version = "1.17.0", default-features = false }
thiserror = "1.0.34"
url = "2.2.2"
xrc = { path = "../xrc" }
