[package]
name = "xrc-tests"
version = "0.8.0"
edition = "2021"

[dependencies]
candid = "0.8.4"
futures = "0.3.28"
hex = "0.4.3"
ic-cdk = "0.6.5"
ic-xrc-types = { path = "../ic-xrc-types" }
maplit = "1.0.2"
reqwest = { version = "0.11", default_features = false,  features = ["json", "rustls-tls-webpki-roots", "stream"] }
serde = "1.0.110"
serde_json = "1.0.74"
tera = { version = "1.17.0", default-features = false }
thiserror = "1.0.34"
time = { version = "0.3.21", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
xrc = { path = "../xrc" }
