[package]
name = "xrc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
async-trait = "0.1.58"
candid.workspace = true
ic-cdk.worksapce = true
ic-cdk-macros.workspace = true
ic-xrc-types = { path = "../ic-xrc-types" }
futures = "0.3.23"
lru = "0.9.0"
serde = "1.0.110"
serde_json = "1.0.74"
chrono = "=0.4.19"
serde_derive = "1.0"
serde_bytes = "0.11"
serde-xml-rs = "0.6.0"

[dev-dependencies]
candid = { workspace = true, features = ["parser"] }
hex = "0.4"
maplit = "1.0.2"
rand = "0.8.5"

[features]
ipv4-support = []
disable-forex-weekend-check = []
disable-forex-timezone-offset = []
