[package]
name = "xrc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
async-trait = "0.1.89"
candid = { workspace = true }
chrono = { workspace = true }
ic-cdk = { workspace = true }
ic-xrc-types = { path = "../ic-xrc-types" }
futures = "0.3.31"
lru = "0.16.3"
serde = "1.0.228"
serde_json = "1.0.149"

serde_derive = "1.0"
serde_bytes = "0.11.19"
serde-xml-rs = "0.6.0"

[dev-dependencies]
candid = { workspace = true }
candid_parser = "0.3.0"
hex = "0.4"
maplit = "1.0.2"
rand = "0.8.5"

[features]
application-subnet = []
ipv4-support = []
disable-forex-weekend-check = []
disable-forex-timezone-offset = []
